# KOTA

./: .gitignore  CMakeLists.txt  LICENSE  PATENTS.md  README.md  go.mod  go.sum
api/: kota_control_plane.proto
cmd/kotactl/: apply.go  client_stub.go  root.go  status.go  version.go
docs/: HLD.md  LLD.md  flow.md  setup.md
docs/grafana/: kota-demo.json
kota/: CMakeLists.txt
kota/deploy/: otelcol-demo.yaml  prometheus-scrape-otel.yaml
kota/include/shared/: kota_common.h
kota/src/bpf/maps/: kota_maps.h
kota/src/bpf/programs/: ioctl_observer.bpf.c  lifecycle.bpf.c  scalpel.bpf.c  veto.bpf.c
kota/src/sentinel/core/: attach_manager.cpp  attach_manager.h  control_plane_server.cpp  control_plane_server.h  kotad_nvml_monitor.cpp  kotad_nvml_monitor.h  kotad_ring_dispatch.cpp  kotad_ring_dispatch.h  kotad_runtime.cpp  kotad_runtime.h  main.cpp
kota/src/sentinel/identity/: cilium_endpoint_client.cpp  cilium_endpoint_client.h  cilium_peeker.cpp  cilium_peeker.h  pod_resolver.cpp  pod_resolver.h  ringbuf_consumer.cpp  ringbuf_consumer.h
kota/src/sentinel/maps/: bpf_loader.cpp  bpf_loader.h  kota_bpf_user_abi.h  map_updater.cpp  map_updater.h
kota/src/sentinel/policy/: decision_engine.cpp  kota_profile.h  policy_profile_decision_test.cpp  profile_registry.cpp  profile_registry.h  profile_schema.cpp  profile_store.cpp  profile_store.h
kota/src/sentinel/telemetry/: nvml_poller.cpp  nvml_poller.h  otel_exporter.cpp  otel_exporter.h  violation_logger.cpp  violation_logger.h
scripts/: check_kota_env.sh  kota-metrics-stack.sh
tests/: README.md
tests/apps/image-moderation-api/: Dockerfile  README.md  app.py  launcher.py  requirements.txt
tests/apps/image-moderation-api/k8s/: README.md  image-moderation-demo.yaml
tests/fixtures/oci/: kota_profile_label_golden.json
tests/fixtures/profiles/: bad_nvml_type.yaml  bad_version.yaml  nvml_fault_injection_lab.yaml  valid_profile.yaml
tests/manual/: e2e_network_gpu.sh
